--- a/src/contact.html
+++ b/src/contact.html
@@ -1,83 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet"  href="css/bootstrap.css">
 </head>
-<body>
+
+<body class="bg-primary text-white m-5">
     <header>
-        <h1>Moti Leggese</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-opacity-100">
+            <a class="navbar-brand" href="home.html">
+                <img src="images/avatar.jpg" alt="Avatar Image" width="30" height="30">
+            </a>
+            <button class="navbar-toggler" type="button" id="burger" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="volunteer_activity.html">Volunteer Activity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
 
-    <nav>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section>
-        <h2>Contact Form</h2>
-        <form action="#" method="post">
-            <label for="fullName">Full Name:</label>
-            <input type="text" name="fullName" required>
-
-            <label for="address">Address:</label>
-            <textarea name="address" rows="3" required></textarea>
-
-            <label for="phoneNumber">Phone Number:</label>
-            <input type="tel" name="phoneNumber" required>
-
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
-
-            <input type="submit" value="Submit">
-        </form>
+    <section class="section">
+        <div class="container">
+            <h1 class="text-4xl font-bold">Moti Leggese</h1>
+        </div>
     </section>
 
-    <section>
-        <h2>Direct Contact</h2>
-        <p>
-            Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.
-        </p>
-        <address>
-            <p>Email: <a href="mailto:motileggese@gmail.com">motileggese@gmail.com</a></p>
-            <p>Phone: +251922426411</p>
-        </address>
+    <section class="section">
+        <div class="container m-md-4">
+            <h2 class="text-2xl font-bold">Contact Form</h2>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="fullName">Full Name:</label>
+                    <input class="form-control" type="text" name="fullName" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <textarea class="form-control" name="address" rows="3" required></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="phoneNumber">Phone Number:</label>
+                    <input class="form-control" type="tel" name="phoneNumber" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input class="form-control" type="email" name="email" required>
+                </div>
+
+                <div class="form-group mt-3">
+                    <input class="btn btn-warning" type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
     </section>
 
-    <!-- Address Section -->
-    <section>
-        <h2>Address</h2>
-        <p>
-            If you prefer traditional mail or want to drop by, here's my address:
-        </p>
-        <p>
-            Ghana St., Addis Ababa, Ethiopia
-        </p>
+    <section class="section col-md-4">
+        <div class="container">
+            <h2 class="text-2xl font-bold">Direct Contact</h2>
+            <p>
+                Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and collaborations.
+            </p>
+            <address>
+                <p>Email: <a href="mailto:motileggese@gmail.com" class="link-info">motileggese@gmail.com</a></p>
+                <p>Phone: +251922426411</p>
+            </address>
+        </div>
     </section>
+    <div class="container row">
 
-    <!-- Social Media Section -->
-    <section>
-        <h2>Social Media</h2>
-        <p>
-            Connect with me on social media for the latest updates and to stay in the loop:
-        </p>
-        <ul>
-            <li><a href="https://t.me/motiition" target="_blank">Telegram</a></li>
-            <img src="images/telegram.jpg" alt="Telegram Logo">
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">X</a></li>
-            <img src="images/x.jpeg" alt="X Logo">
-        </ul>
-    </section>
+        <!-- Address Section -->
+        <section class="section col-md-6">
+            <h2 class="h3">Address</h2>
+            <p>
+                If you prefer traditional mail or want to drop by, here's my address:
+            </p>
+            <p>
+                Ghana St., Addis Ababa, Ethiopia
+            </p>
+        </section>
+    
+        <!-- Social Media Section -->
+        <section class="section col-md-6">
+            <h2 class="h3">Social Media</h2>
+            <p>
+                Connect with me on social media for the latest updates and to stay in the loop:
+            </p>
+            <ul class="list-inline">
+                <li class="list-inline-item">
+                    <a href="https://t.me/motiition" target="_blank">
+                        <img src="images/telegram.jpg" alt="Telegram Logo" style="max-width: 50px; max-height: 50px;">
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">
+                        <img src="images/x.jpeg" alt="X Logo" style="max-width: 50px; max-height: 50px;">
+                    </a>
+                </li>
+            </ul>
+        </section>
+    
+        </div>    
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <footer class="footer">
+        <div class="container text-center">
+            <p>&copy; 2023 Moti Leggese</p>
+        </div>
     </footer>
+
+    <script src="js/script.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
