--- a/src/home.html
+++ b/src/home.html
@@ -1,90 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+
+<body class="bg-primary text-white m-5">
     <header>
-        <h1>Welcome to Moti Leggese's Website</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <img src="images/home.jpg" alt="homepage Background">
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-opacity-100">
+            <a class="navbar-brand" href="home.html">
+                <img src="images/avatar.jpg" alt="Avatar Image" width="30" height="30">
+            </a>
+            <button class="navbar-toggler" type="button" id="burger" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="volunteer_activity.html">Volunteer Activity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-
-    <section>
-        <h2>About Me</h2>
-        <img src="images/about.jpg" alt="About Me Image">
-        <p>
-            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
-        </p>
+    <section class="mt-5">
+        <div class="container">
+            <h1 class="display-4">Welcome to Moti Leggese's Website</h1>
+        </div>
     </section>
 
-    <section>
-        <h2>Featured Projects</h2>
-        <img src="images/featured.jpg" alt="Featured projetcs">
-        <p>
-            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
-        </p>
-        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank">Check my Projects on GitHub</a>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">About Me</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img src="images/about.jpg" alt="About Me Image" class="img-fluid">
+                    </figure>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Skills and Expertise</h2>
-        <img src="images/core_skills.jpg" alt="core skill">
-        <p>
-            Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
-        </p>
-        <p>
-            Visit my <a href="skills.html">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
-        </p>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">Featured Projects</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img src="images/featured.jpg" alt="Featured Projects" class="img-fluid">
+                    </figure>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
+                    </p>
+                    <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank" class="link-info">Check my Projects on GitHub</a>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Volunteer Activity and Contributions</h2>
-        <img src="images/volunteer.jpg" alt="volunteer_activity">
-        <p>
-            Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
-        </p>
-        <p>
-            Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
-        </p>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">Skills and Expertise</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img src="images/core_skills.jpg" alt="Core Skills Image" class="img-fluid">
+                    </figure>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
+                    </p>
+                    <p>
+                        Visit my <a href="skills.html" class="link-info">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Projest Pulse</h2>
-        <img src="images/pulse.jpg" alt="pulse">
-        <p>
-            Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
-        </p>
-        <ul>
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">Exciting News on X Platform</a></li>
-            <li><a href="https://t.me/motiition" target="_blank">Join me on Telegram for Live Updates</a></li>
-        </ul>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">Volunteer Activity and Contributions</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img src="images/volunteer.jpg" alt="Volunteer Activity Image" class="img-fluid">
+                    </figure>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html" class="link-info">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
+                    </p>
+                    <p>
+                        Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Get in Touch</h2>
-        <p>
-            Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html">Contact page</a> for direct contact information, my address, and social media links.
-        </p>
-        <p>
-            Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
-        </p>
-        <a href="contact.html">Contact Me</a>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">Project Pulse</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img src="images/pulse.jpg" alt="Project Pulse Image" class="img-fluid">
+                    </figure>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
+                    </p>
+                    <ul>
+                        <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank" class="link-info">Exciting News on X Platform</a></li>
+                        <li><a href="https://t.me/motiition" target="_blank" class="link-info">Join me on Telegram for Live Updates</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <section class="mt-5">
+        <div class="container">
+            <h2 class="h3">Get in Touch</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <p>
+                        Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html" class="link-info">Contact page</a> for direct contact information, my address, and social media links.
+                    </p>
+                    <p>
+                        Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
+                    </p>
+                    <a href="contact.html" class="link-info">Contact Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="content text-center">
+            <p>&copy; 2023 Moti Leggese</p>
+        </div>
     </footer>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
+   
+    
 </body>
+
 </html>
